--- a/Basic JavaScript Projects/Calculator/CSS/Calculator_CSS.css
+++ b/Basic JavaScript Projects/Calculator/CSS/Calculator_CSS.css
@@ -56,7 +56,7 @@ button:hover{
 	background-color: lightgray;
 }
 
-all-clear{
+.all-clear{
 	background-color: red;
 	border-color: darkslategray;
 	color: #fff;	
@@ -66,7 +66,7 @@ all-clear{
 	background-color: darkred;
 }
 
-equal-sign{
+.equal-sign{
 	background-color: blue;
 	border-color: darkslategray;
 	color: #fff;
@@ -74,7 +74,7 @@ equal-sign{
 	grid-area: 2/4/6/5;
 }
 
-equal-sign:hover{
+.equal-sign:hover{
 	background-color: darkblue;
 }
 
