--- a/Basic JavaScript Projects/JS Challenges/JS Challenge CSS/popup.css
+++ b/Basic JavaScript Projects/JS Challenges/JS Challenge CSS/popup.css
@@ -93,3 +93,48 @@ html, body{
 .close:hover {
 		color: #fc0000;
 	}
+
+
+
+/*This is CSS for the keyframes challenge*/
+#keyFrame {
+  width: 100px;
+  height: 100px;
+  background: red;
+  position: relative;
+  animation: mymove 5s infinite;
+}
+
+#keyHead{
+	position: static;
+	color: black;
+}
+
+@keyframes mymove {
+  0%   {top: 0px; background: red; width: 100px;}
+  100% {top: 200px; background: yellow; width: 300px;}
+}
+
+/*End of keyframes challenge*/
+
+/*This is CSS for the zoom in and out effect*/
+#shika{
+	position: fixed;
+	left: 450px;
+	top: 400px;
+	width: 25%;
+	animation: zoom-in-zoom-out 3s ease infinite;;
+}
+
+@keyframes zoom-in-zoom-out {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(1.5, 1.5);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+/*End This is CSS for the zoom in and out effect*/
